-bug#0001333: Lack of scheme indexes
-bug#0001359: Better error checking in rrd.php
-bug#0001397: Never use "Delete" as default action in any drop-list in cacti to avoid disaster
-bug#0001414: COMMENT field can cause rrdtool to report "Legend too long"
-bug#0001492: RRDTool 1.3 series fonts (fontconfig) support
-bug#0001600: Default action on lists should be "None"
-bug#0002232: poller_graphs_reapply_names.php requires -id=All when -id=all should work also
-bug#0002237: Issue with filtering '/' on "Create Graphs for this Host" page
-bug#0002250: Bug when creating a data source, broken stub remains
-bug#0002257: status_fail_date and status_rec_date are initialised when a host recovers
-bug#0002258: Save an existing Data Template (Script Data query based) cause loss of Custom Data in Data Sources
-bug#0002264: Association spelt incorrectly
-bug#0002266: Against spelt incorrectly
-bug#0002280: meta http-equiv=refresh content in lib/graph_export.php contains to many apostrophes (more findings apply)
-bug: avoid PHP "pass by reference" error for ping function
-bug: GRPINT now supporting AVERAGE, LAST, MAX and MIN correctly (MAX of MAX, MAX of AVERAGEs now possible)
-bug: Logarithmic Scaling and units-si dependencies fixed (thanks to ke6oms)
-bug: allow empty [upper|lower]_limit even without autoscaling
-bug: correct grep'ing of icmp[s|r]eq required for newer linux versions (e.g. Fedora 14)
-bug: when changing a data template, "suggested name" title of data sources are unconditionally overwritten
-feature#0000475: Add RRDTool options currently not settable within Cacti
-feature#0000726: add VDEF support
-feature#0000954: implement --alt-y-grid graph option
-feature#0001030: Lower limit and upper limit |query_*| variable support for Graph Templates
-feature#0001111: add remove-device.php cli script, replace numerical constants for permission handling by PERM_*
-feature#0001185: Mass enable/disable graph export per graph from Graph Management